--- a/src/style.css
+++ b/src/style.css
@@ -19,16 +19,34 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+
   min-width: 320px;
   min-height: 100vh;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style-type: none;
 }
 
 h1 {
@@ -37,10 +55,15 @@ h1 {
 }
 
 #app {
+  width: 100%;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+  display: grid;
+  grid-template-columns: 500px 1fr;
+  gap: 20px;
 }
 
 .card {
@@ -61,6 +84,9 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+
+  align-self: start;
+  min-width: 200px;
 }
 
 button:hover {
@@ -70,6 +96,70 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+input,
+textarea {
+  border: none;
+}
+
+textarea {
+  resize: none;
+}
+
+/* FORM */
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  max-width: 500px;
+  width: 100%;
+}
+
+.form-label {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
+  font-weight: 800;
+  letter-spacing: 0.025em;
+  text-align: left;
+}
+
+.form-label input,
+.form-label textarea {
+  padding: 12px 16px;
+
+  border: 1px solid #888;
+  border-radius: 8px;
+
+  font-size: 16px;
+  font-family: inherit;
+}
+
+.feedback-wrapper {
+  text-align: left;
+  padding: 12px;
+}
+
+.feedback {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.feedback-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 6px;
+
+  border: 1px solid #888;
+  border-radius: 8px;
+  padding: 10px;
+
+  max-width: 260px;
 }
 
 @media (prefers-color-scheme: light) {
